--- a/tecolotl-web/src/main/webapp/profesor/asignar-actividad.xhtml
+++ b/tecolotl-web/src/main/webapp/profesor/asignar-actividad.xhtml
@@ -11,7 +11,8 @@
         <ui:define name="menu">
             <ul class="uk-subnav nav-sub uk-visible@m " uk-margin="">
                 <li ><h:link outcome="dashboard-maestro" value="Home" styleClass="letra-color-subnav"/></li>
-                <li class="uk-text-uppercase nav-sub-active"><h:link outcome="biblioteca-profesor2" styleClass="letra-color-subnav" value="Library"/> </li>
+<!--                <li class="uk-text-uppercase "><h:link  outcome="asignar-tarea"  value="biblioteca" styleClass="letra-color-subnav"/> </li>-->
+                <li class="uk-text-uppercase"><a href="#" class="letra-color-subnav">Library</a></li>
                 <li class="uk-text-uppercase"><a href="#" class="letra-color-subnav">Edit profile</a></li>
             </ul>
             <div class="uk-navbar-left uk-hidden@m">
@@ -26,7 +27,7 @@
                         <li ><h:link outcome="dashboard-maestro" value="Home" styleClass="letra-color-subnav"/></li>
                         <!--<li class="uk-text-uppercase "><a href="#" class="letra-color-subnav">Group Details</a></li>-->
                         <!--<li class="uk-text-uppercase "><a href="#" class="letra-color-subnav">Student Details</a></li>-->
-                        <li class="uk-text-uppercase nav-sub-active"><h:link outcome="biblioteca-profesor2" styleClass="letra-color-subnav" value="Library"/> </li>
+                        <li class=" "><h:link outcome="asignar-actividad" styleClass="letra-color-subnav" value="Librar"/> </li>
                         <li class="uk-text-uppercase"><a href="#" class="letra-color-subnav">Edit profile</a></li>
                     </ul>
 
@@ -35,6 +36,7 @@
         </ui:define>
         <ui:define name="contenido">
             <h:outputStylesheet library="css" name="profesor/biblioteca-profesor.css"/>
+            <h:outputStylesheet library="css" name="profesor/scroll-profesor.css"/>
             <div class="uk-container">
                 <div class="uk-width-1-1@m uk-margin-medium-top">
                     <form id="search-form" action="">
@@ -55,50 +57,65 @@
                     <li data-uk-filter-control=".B2"><a href="#">Level B2</a></li>
                     <li data-uk-filter-control=".C1"><a href="#">Level C1</a></li>
                     <li data-uk-filter-control=".C2"><a href="#">Level C2</a></li>
+                    <li data-uk-filter-control=".nivel"><a href="#">Level #{param["nivelLenguaje"]}</a></li>
                 </ul>
 
+                 <div class="uk-margin-medium-top uk-flex uk-flex-right">
+                    <form action="">
+                        <input type="button" class="uk-button  uk-button-primary uk-border-rounded" value="Asignar"/>
+                     </form>
+                 </div>
+
                 <h:panelGroup layout="block" styleClass="uk-grid js-filter uk-margin-medium-top uk-margin-large-bottom" pt:uk-grid="">
-                    <ui:repeat value="#{actividadesControlador.actividadesModeloLista}" var="actividadModelo">
-                        <h:panelGroup layout="block" styleClass="uk-width-1-3@m #{actividadModelo.languageLevel}" pt:data-tags="a beautiful landscape - nature outdoor">
-                            <div class="uk-card uk-card-default uk-card-small uk-card-hover card-border #{actividadModelo.languageLevel}">
+                    <ui:repeat value="#{actividadControlador.actividadModeloLista}" var="actividadModelo">
+                        <h:panelGroup layout="block" styleClass="uk-width-1-3@m #{param['nivelLenguaje']}" pt:data-tags="a beautiful landscape - nature outdoor">
+                            <div class="uk-card uk-card-default uk-card-small uk-card-hover card-border #{param['nivelLenguaje']}">
                                 <div class="uk-card-header border-card">
                                     <h:panelGroup layout="block" styleClass="uk-grid uk-grid-small uk-text-small" pt:uk-grid="">
                                         <div class="uk-width-expand">
-                                            <h:graphicImage styleClass="uk-border-circle" library="img" name="3ojos.svg" width="30" height="30" />
-                                            <span class="cat-txt">#{actividadModelo.topic}</span>
+                                            <h:graphicImage styleClass="uk-border-circle" library="img" name="mounstro/3ojos.svg" width="30" height="30" />
+                                            <span class="cat-txt">#{actividadModelo.temaModelo.valor}</span>
                                         </div>
                                         <div class="uk-width-auto uk-text-right uk-text-muted">
-                                            <h:outputText styleClass="uk-margin-small-right" pt:uk-icon="icon:clock"/>#{actividadModelo.time}
+                                            <h:outputText styleClass="uk-margin-small-right" pt:uk-icon="icon:clock"/>#{actividadModelo.tiempo}
+                                            <input type="checkbox" class="uk-checkbox"/>
                                         </div>
                                     </h:panelGroup>
                                 </div>
                                 <div class="uk-card-media-top">
-                                    <div uk-spinner=""></div>
+                                    <h:panelGroup layout="block" pt:uk-spinner=""/>
                                     <div class="video">#{actividadModelo.idVideo}</div>
                                     <div class="video-error"><h:graphicImage library="img" name="video-error.svg" width="120" height="120"/> </div>
                                 </div>
                                 <div class="uk-card-body">
-                                    <h6 class="uk-margin-small-bottom uk-margin-remove-adjacent uk-text-bold uk-text-small">#{actividadModelo.question}</h6>
-                                    <p class="uk-text-small uk-text-muted ">#{actividadModelo.learnersType}</p>
+                                    <h6 class="uk-margin-small-bottom uk-margin-remove-adjacent uk-text-bold uk-text-small">#{actividadModelo.preguntaDetonadora}</h6>
+                                    <p class="uk-text-small uk-text-muted ">#{actividadModelo.tipoEstudianteModelo.valor}</p>
                                 </div>
                                 <div class="uk-card-footer">
                                     <h:panelGroup layout="block" styleClass="uk-grid uk-grid-small uk-grid-divider uk-flex uk-flex-middle" pt:data-uk-grid="">
                                         <div class="uk-width-auto uk-text-small text-color-level1 uk-text-bold">
                                             <h:panelGroup pt:uk-grid="" styleClass="uk-child-width-auto uk-grid uk-grid-small">
                                                 <!--<div><h:link styleClass="uk-link-reset"><h:outputText pt:uk-icon="icon: file-pdf" styleClass=""/></h:link></div>-->
-                                                <div><h:graphicImage pt:data-uk-tooltip="title: Download" styleClass="uk-icon-image uk-svg" library="img" name="escuela.svg" /></div>
-                                                <div><h:graphicImage pt:data-uk-tooltip="title: Didactic Guide" styleClass="uk-icon-image uk-svg" library="img" name="decarga.svg" /></div>
+                                                <div><h:graphicImage pt:data-uk-tooltip="title: Download" styleClass="uk-icon-image uk-svg" library="img" name="icono/escuela.svg" /></div>
+                                                <div><h:graphicImage pt:data-uk-tooltip="title: Didactic Guide" styleClass="uk-icon-image uk-svg" library="img" name="icono/decarga.svg" /></div>
                                                 <!--<div><h:link styleClass="uk-link-reset"><h:outputText pt:uk-icon="icon: file-pdf" styleClass=""/></h:link></div>-->
                                             </h:panelGroup>
                                         </div>
                                         <div class="uk-width-expand ">
-                                            <div class="uk-grid uk-grid-small uk-child-width-1-5" uk-grid="">
-                                                <div><h:graphicImage pt:data-uk-tooltip="title: Listening" styleClass="uk-icon-image uk-svg" library="img" name="listen.svg" /></div>
-                                                <div><h:graphicImage pt:data-uk-tooltip="title: Transcript" styleClass="uk-icon-image uk-svg " library="img" name="transcript1.svg" /></div>
-                                                <div><h:graphicImage pt:data-uk-tooltip="title: Reading" styleClass="uk-icon-image uk-svg " library="img" name="reading.svg" /></div>
-                                                <div><h:graphicImage pt:data-uk-tooltip="title: Grammar" styleClass="uk-icon-image uk-svg " library="img" name="gramatica.svg" /></div>
-                                                <div><h:graphicImage pt:data-uk-tooltip="title: Quiz" styleClass="uk-icon-image uk-svg " library="img" name="quizcalifica.svg" /></div>
-                                            </div>
+                                            <h:panelGroup layout="block" styleClass="uk-grid uk-grid-small uk-child-width-1-5" pt:uk-grid="">
+                                                <div><h:graphicImage pt:data-uk-tooltip="title: Listening" styleClass="uk-icon-image uk-svg" library="img" name="icono/listen.svg" /></div>
+                                                <div>
+                                                    <h:form>
+                                                        <h:commandLink pt:uk-toggle="#modal-transcript" >
+                                                            <h:graphicImage pt:data-uk-tooltip="title: Trasncript" styleClass="uk-icon-image uk-svg" library="img" name="icono/transcript1.svg" />
+                                                            <f:ajax listener="#{actividadControlador.buscaTranscripcion(actividadModelo)}" render="transcripcion" />
+                                                        </h:commandLink>
+                                                    </h:form>
+                                                </div>
+                                                <div><h:graphicImage pt:data-uk-tooltip="title: Reading" styleClass="uk-icon-image uk-svg " library="img" name="icono/reading.svg" /></div>
+                                                <div><h:graphicImage pt:data-uk-tooltip="title: Grammar" styleClass="uk-icon-image uk-svg " library="img" name="icono/gramatica.svg" /></div>
+                                                <div><h:graphicImage pt:data-uk-tooltip="title: Quiz" styleClass="uk-icon-image uk-svg " library="img" name="icono/quizcalifica.svg" /></div>
+                                            </h:panelGroup>
                                         </div>
 
                                     </h:panelGroup>
@@ -109,6 +126,28 @@
                 </h:panelGroup>
                 </div>
             </div>
+
+            <h:panelGroup layout="block" id="modal-transcript" pt:uk-modal="" >
+                <div class="uk-modal-dialog uk-margin-auto-vertical modal-tam " >
+                    <div class="uk-modal-header header-color-card">
+                        <h2 class="uk-modal-title titulo-modal">Reporte</h2>
+                    </div>
+                    <div class="barra-modal"></div>
+
+                        <div class="uk-modal-body  modal-contenedor-transcrip modal">
+                           <h:panelGroup layout="block" id="transcripcion">
+                              <h:outputText value="#{actividadControlador.trasncrip}" escape="false"/>
+                           </h:panelGroup>
+                        </div>
+                        <div class="uk-modal-footer uk-text-right">
+                            <button class="boton-escuadron-base-secundary uk-modal-close" type="button">Cancel</button>
+                            <button class="boton-escuadron-base  uk-margin-small-left">Aceptar</button>
+                        </div>
+
+
+                </div>
+
+            </h:panelGroup>
             <h:outputScript library="js" name="profesor/biblioteca-profesor.js"/>
         </ui:define>
     </ui:composition>
