--- a/tecolotl-web/src/main/webapp/profesor/dashboard-maestro.xhtml
+++ b/tecolotl-web/src/main/webapp/profesor/dashboard-maestro.xhtml
@@ -73,36 +73,36 @@
                                 <h5 class="uk-text-capitalize uk-text-bold uk-margin-remove-bottom titulo-cards color-title-card uk-text-center">Grupos</h5>
                                 <!--<h1 class="color-texto uk-text-center size-one uk-margin-remove-top uk-margin-remove-bottom">8</h1>-->
                                    <div class="uk-flex uk-flex-center">
-                                        <div class="tamaño-imagen"  uk-tooltip="title: #{dashboardProfesorControlador.profesorModelo.id} Grupos; pos: right">
-                                                <h:graphicImage styleClass="uk-border-circle imagen-card-section uk-svg " library="img" name="avatar/maestra.svg"   pt:uk-svg=""/>
-                                        </div>
+                                        <h:panelGroup layout="block" styleClass="tamaño-imagen"  pt:uk-tooltip="title: #{dashboardProfesorControlador.profesorModelo.id} Grupos; pos: right">
+                                                <h:graphicImage styleClass="uk-border-circle imagen-card-section uk-svg " library="img" name="avatar/maestra.svg"   />
+                                        </h:panelGroup>
                                    </div>
                             </div>
                             <div>
                                 <h5 class="uk-text-capitalize uk-text-bold uk-margin-remove-bottom titulo-cards color-title-card uk-text-center">Nro. Alumnos</h5>
                                 <!--<h1 class="color-texto uk-text-center size-one uk-margin-remove-top uk-margin-remove-bottom">180</h1>-->
                                 <div class="uk-flex uk-flex-center">
-                                    <div class="tamaño-imagen"  uk-tooltip="title:#{dashboardProfesorControlador.profesorModelo.id} Alumnos; pos: right">
-                                        <h:graphicImage styleClass="uk-border-circle imagen-card-section uk-svg " library="img" name="avatar/maestra.svg"   pt:uk-svg=""/>
-                                    </div>
+                                    <h:panelGroup layout="block" styleClass="tamaño-imagen"  pt:uk-tooltip="title:#{dashboardProfesorControlador.profesorModelo.id} Alumnos; pos: right">
+                                        <h:graphicImage styleClass="uk-border-circle imagen-card-section uk-svg " library="img" name="avatar/maestra.svg"   />
+                                    </h:panelGroup>
                                 </div>
                             </div>
                             <div>
                                 <h5 class="uk-text-capitalize uk-text-bold uk-margin-remove-bottom titulo-cards color-title-card uk-text-center">Horas de Conexión</h5>
                                 <!--<h1 class="color-texto uk-text-center size-one uk-margin-remove-top uk-margin-remove-bottom">30<small class="uk-text-small">HR</small></h1>-->
                                 <div class="uk-flex uk-flex-center">
-                                    <div class="tamaño-imagen"  uk-tooltip="title: #{dashboardProfesorControlador.profesorModelo.id} Horas; pos: right">
-                                        <h:graphicImage styleClass="uk-border-circle imagen-card-section uk-svg " library="img" name="avatar/administrador.svg"   pt:uk-svg=""/>
-                                    </div>
+                                    <h:panelGroup styleClass="tamaño-imagen"  pt:uk-tooltip="title: #{dashboardProfesorControlador.profesorModelo.id} Horas; pos: right">
+                                        <h:graphicImage styleClass="uk-border-circle imagen-card-section uk-svg " library="img" name="avatar/administrador.svg"   />
+                                    </h:panelGroup>
                                 </div>
                             </div>
                             <div>
                                 <h5 class="uk-text-capitalize uk-text-bold uk-margin-remove-bottom titulo-cards color-title-card uk-text-center">Ejecicios revisión</h5>
                                 <!--<h1 class="color-texto uk-text-center size-one uk-margin-remove-top uk-margin-remove-bottom">38</h1>-->
                                 <div class="uk-flex uk-flex-center">
-                                    <div class="tamaño-imagen"  uk-tooltip="title: #{dashboardProfesorControlador.profesorModelo.id} Pendientes; pos: left">
-                                        <h:graphicImage styleClass="uk-border-circle imagen-card-section uk-svg " library="img" name="avatar/coordinador.svg"   pt:uk-svg=""/>
-                                    </div>
+                                    <h:panelGroup styleClass="tamaño-imagen"  pt:uk-tooltip="title: #{dashboardProfesorControlador.profesorModelo.id} Pendientes; pos: left">
+                                        <h:graphicImage styleClass="uk-border-circle imagen-card-section uk-svg " library="img" name="avatar/coordinador.svg" />
+                                    </h:panelGroup>
                                 </div>
                             </div>
                         </div>
@@ -138,7 +138,7 @@
         </div>
 
         <h:panelGroup layout="block" styleClass="uk-grid uk-child-width-1-2@m uk-section uk-section-default uk-padding-remove-top uk-padding-remove-bottom" pt:uk-grid="" >
-                <ui:repeat value="#{dahsboardProfesorControldor.graficaModelos}" var="grafica">
+                <ui:repeat value="#{graficaControlador.graficaModelos}" var="grafica">
                 <div>
                     <h5 class="uk-text-capitalize uk-text-bold uk-margin-remove-bottom titulo-section">Rendimiento del Grupo</h5>
                         <div class="chart-container-min color-contenido-grafica">
@@ -162,7 +162,7 @@
             <h5 class="uk-text-capitalize uk-text-bold uk-margin-remove-bottom titulo-section">Grupos de Jose</h5>
             <h:form id="formulario-detalle-profesor" styleClass="uk-form-stacked">
 
-                <div class="uk-overflow-auto uk-margin-small-top">
+                <div class=" uk-margin-small-top">
                     <!--  Modificar aqui de acuerdo al profesor  -->
                     <h:dataTable
                             value="#{dashboardProfesorControlador.grupoModeloLista}"
