--- a/tecolotl-web/src/main/webapp/alumno/transcrip-final.xhtml
+++ b/tecolotl-web/src/main/webapp/alumno/transcrip-final.xhtml
@@ -9,7 +9,7 @@
 <ui:composition template="/template/escolar/template-alumno.xhtml">
     <ui:define name="menu">
         <div class="left-content-box  content-box-dark">
-            <h:graphicImage library="img" name="astronauta-nino.svg" alt="" class="uk-border-circle profile-img"/>
+            <h:graphicImage library="img" name="avatar/astronauta-nino.svg" alt="" class="uk-border-circle profile-img"/>
             <h6 class="uk-text-center uk-margin-remove-vertical text-light">John Doe</h6>
 
             <div class="uk-position-relative uk-text-center uk-display-block">
@@ -162,9 +162,9 @@
                         <li class="order-words">
                                 <h1 class="uk-text-center lescuadron" style="color: white">Ordenas las palabras en el orden correspondiente</h1>
                                 <div class="imagen-ordenar">
-                                    <h:graphicImage library="img" name="Whom1.svg"/>
+                                    <h:graphicImage library="img" name="mounstro/whom.svg"/>
                                 </div>
-                                <h:panelGroup layout="block" styleClass="uk-container   padding-contenedor estilo-contenedor " >
+                                <h:panelGroup layout="block" styleClass="uk-container padding-contenedor estilo-contenedor " >
 
                                     <h:panelGroup layout="block" styleClass="uk-child-width-1-5@m uk-grid " pt:uk-grid="" pt:uk-sortable="">
                                         <div>
