--- a/tecolotl-web/src/main/webapp/alumno/transcrip-final.xhtml
+++ b/tecolotl-web/src/main/webapp/alumno/transcrip-final.xhtml
@@ -30,12 +30,12 @@
         <div class="left-nav-wrap  uk-visible@xl ">
             <ul class="uk-thumbnav uk-thumbnav-vertical uk-position-center uk-margin-large-top">
                 <!--<li class="uk-active"><a href="#"><img src="img/alumno/iconos-login/1.svg" width="80" alt=""></a></li>-->
-                <li><h:link outcome="dashboard-alumno" ><h:graphicImage library="img" name="alumno/planetas/tierra.svg" width="80" alt=""/></h:link></li>
-                <li class="uk-active"><h:link outcome="transcrip-alumno"><h:graphicImage library="img" name="alumno/planetas/planeta1.svg" width="80" alt=""/></h:link></li>
-                <li><h:link outcome="glosario-alumno" ><h:graphicImage library="img" name="alumno/planetas/planeta2.svg"  width="80" alt=""/></h:link></li>
-                <li><h:link outcome="mapa-metal-alumno"><h:graphicImage library="img" name="alumno/planetas/planeta3.svg"  width="80" alt=""/></h:link></li>
-                <li><h:link outcome="biblioteca-alumno"><h:graphicImage library="img" name="alumno/planetas/planeta4.svg"  width="80" height="" alt=""/></h:link></li>
-                <li><a href="#"><h:graphicImage library="img" name="alumno/planetas/planeta5.svg"  width="80" alt=""/></a></li>
+                <li uk-tooltip="title: Dashboard; pos: right"><h:link outcome="dashboard-alumno" ><h:graphicImage library="img" name="alumno/planetas/tierra.svg" width="80" alt=""/></h:link></li>
+                <li uk-tooltip="title: Activity; pos: right" class="uk-active"><h:link outcome="transcrip-alumno"><h:graphicImage library="img" name="alumno/planetas/planeta1.svg" width="80" alt="" /></h:link></li>
+                <li uk-tooltip="title: Glossary; pos: right"><h:link outcome="glosario-alumno" ><h:graphicImage library="img" name="alumno/planetas/planeta2.svg"  width="80" alt="" /></h:link></li>
+                <li uk-tooltip="title: Grammar; pos: right"><h:link outcome="mapa-metal-alumno"><h:graphicImage library="img" name="alumno/planetas/planeta3.svg"  width="80" alt="" /></h:link></li>
+                <li uk-tooltip="title: Map Mental; pos: right"><h:link outcome="biblioteca-alumno"><h:graphicImage library="img" name="alumno/planetas/planeta4.svg"  width="80" height="" alt="" /></h:link></li>
+                <li uk-tooltip="title: Library; pos: right"><a href="#"><h:graphicImage library="img" name="alumno/planetas/planeta5.svg"  width="80" alt="" /></a></li>
             </ul>
         </div>
         <div class="left-nav-wrap uk-position-relative  uk-hidden@xl ">
@@ -50,56 +50,30 @@
         </div>
     </ui:define>
     <ui:define name="contenido">
-        <h:outputStylesheet library="css" name="alumno/transcript.css"/>
-        <h:outputStylesheet library="css" name="/alumno/variables-alumno.css"/>
-        <h:outputStylesheet library="css" name="/alumno/lista-ordenar.css"/>
-        <h:outputStylesheet library="css" name="/alumno/ordenar-palabra.css"/>
-        <h:outputStylesheet library="css" name="/alumno/transcript-drag.css"/>
+        <h:outputStylesheet library="css" name="alumno/transcript/transcript.css"/>
+        <h:outputStylesheet library="css" name="/alumno/transcript/variables-alumno.css"/>
+        <h:outputStylesheet library="css" name="/alumno/transcript/lista-ordenar.css"/>
+        <h:outputStylesheet library="css" name="/alumno/transcript/ordenar-palabra.css"/>
+        <h:outputStylesheet library="css" name="/alumno/transcript/transcript-drag.css"/>
         <h:outputStylesheet library="css" name="letra.css"/>
         <div class="uk-section margen-superior"  style="box-sizing: border-box">
             <div class="uk-container padding-contenedor">
                 <h:panelGroup layout="block" styleClass="" pt:uk-filter="target: .js-filter">
                     <ul class="uk-subnav uk-subnav-pill uk-flex uk-flex-center ">
-                        <li uk-filter-control=".transcrip" class="uk-active"><h:graphicImage library="img" name="coordinador.svg" width="70" height="70"  alt="" styleClass="uk-border-circle"/></li>
-                        <li uk-filter-control=".listening"><h:graphicImage library="img" name="maestra.svg" width="70" height="70" styleClass="uk-border-circle"/></li>
-                        <li uk-filter-control=".order-words"><h:graphicImage library="img" name="maestro.svg" width="70" height="70" styleClass="uk-border-circle"/></li>
-                        <li uk-filter-control=".answer"><h:graphicImage library="img" name="administrador.svg" width="70" height="70" styleClass="uk-border-circle"/></li>
+                        <li uk-filter-control=".transcrip" uk-tooltip="Video" class="uk-active"><h:graphicImage library="img" name="mounstro/morado.svg" width="70" height="70"  alt="" styleClass="uk-border-circle"/></li>
+                        <li uk-filter-control=".listening" uk-tooltip="Listening"><h:graphicImage library="img" name="mounstro/naranja.svg" width="70" height="70" styleClass="uk-border-circle"/></li>
+                        <li uk-filter-control=".order-words" uk-tooltip="Order Words"><h:graphicImage library="img" name="mounstro/3ojos.svg" width="70" height="70" styleClass="uk-border-circle"/></li>
+                        <li uk-filter-control=".answer" uk-tooltip="Transcript"><h:graphicImage library="img" name="mounstro/verde.svg" width="70" height="70" styleClass="uk-border-circle"/></li>
                     </ul>
 
                     <ul class="js-filter  uk-text-center" >
                         <li class="transcrip">
                            <h:panelGroup styleClass="uk-grid" pt:uk-grid="">
                                <div class="uk-width-1-2@m tam-contenido uk-padding-remove-left ">
-                                   <iframe class="" width="100%" height="100%" src="https://www.youtube.com/embed/JcMtWwiyzpU" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen=""></iframe>
+                                   <iframe class="" width="100%" height="100%" src="https://www.youtube.com/embed/0_1NU60qHWs" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen=""></iframe>
                                </div>
-                               <div class="uk-width-1-2@m uk-text-justify transcrip-contenedor tam-contenido scroll-alumno letra-guion borde-guion" >
-                                   <p>
-                                       <span class="letra-perdonaje">Will Smith:</span> I know you guys have been waiting and here&#39;s the very first trailer for Aladdin. It is the
-                                       very first trailer. Don&#39;t get <h:outputText styleClass="palabra-glosario" value="dizzy" pt:uk-tooltip="title:Adjective: Mareado"/> though; don&#39;t get dizzy before we start to trailer. Don&#39;t get dizzy!</p>
-                                   <p><span class="letra-perdonaje">Crowd:</span> Stop, <h:outputText styleClass="palabra-glosario" value="thief!" pt:uk-tooltip="title:Noun: Ladrón"/>  Vandal! Street rat! Get him! Stop that boy! Up, there!</p>
-                                   <p><span class="letra-perdonaje">Guard:</span> He’s on the roof! Watch out!</p>
-                                   <p><span class="letra-perdonaje">Jafar:</span> You <h:outputText styleClass="palabra-glosario" value="stumbled" pt:uk-tooltip="title:Verb(Stumble):Tropezón"/> upon an opportunity. I can make you rich… rich enough to impress a
-                                       princess</p>
-                                   <p><span class="letra-perdonaje">Aladdin:</span> What would I have to do?</p>
-                                   <p><span class="letra-perdonaje">Jafar:</span> There&#39;s a Cave of Wonders. Bring me the lamp.</p>
-                                   <p><span class="letra-perdonaje">Genie:</span> Oh, great one who <h:outputText styleClass="palabra-glosario" value="summons" pt:uk-tooltip="title:Verb(Summon):Convocar"/> me. I stand by my <h:outputText styleClass="palabra-glosario" value="oath " pt:uk-tooltip="title:Noun:Juramento"/> <h:outputText styleClass="palabra-glosario" value="loyalty" pt:uk-tooltip="title:Noun:Lealtad"/> two wishes three. I&#39;m kidding
-                                       Russians.
-                                       Watch out! You have woken me up! You ain’t never had a friend like me</p>
-                                   <p><span class="letra-perdonaje">Aladdin:</span> Hey, can you make me a prince.</p>
-                                   <p><span class="letra-perdonaje">Genie:</span> There is a lot of gray area in make me a prince. I could just make you a prince</p>
-                                   <p><span class="letra-perdonaje">Aladdin:</span> Oh, no!</p>
-                                   <p><span class="letra-perdonaje">Genie:</span> Have you seen my palace?
-                                       You look like a prince on the outside but I didn&#39;t change anything on the inside. Showtime!</p>
-                                   <p><span class="letra-perdonaje">Aladdin:</span> No, I&#39;m <h:outputText styleClass="palabra-glosario" value="in charge" pt:uk-tooltip="title:Adverb:Encargado"/>. Okay, I say when it&#39;s time…Really?
-                                       I thought a princess could go anywhere…</p>
-                                   <p><span class="letra-perdonaje">Jasmine:</span> Not this princess.</p>
-                                   <p><span class="letra-perdonaje">Aladdin:</span> Do you trust me?</p>
-                                   <p><span class="letra-perdonaje">Jasmine:</span> A whole new world.</p>
-                                   <p><span class="letra-perdonaje">Aladdin:</span> Don’t you <h:outputText styleClass="palabra-glosario" value="dare" pt:uk-tooltip="title:Verb:Osar/Atreverse"/>close your eyes</p>
-                                   <p><span class="letra-perdonaje">Jasmine:</span> A hundred thousand things to see</p>
-                                   <p><span class="letra-perdonaje">Aladdin:</span> Hold your <h:outputText styleClass="palabra-glosario" value="breath" pt:uk-tooltip="title:Noun:Respiración"/>. It gets better.</p>
-                                   <p><span class="letra-perdonaje">Jasmine:</span> I’m like a <h:outputText styleClass="palabra-glosario" value="shooting star" pt:uk-tooltip="title:Noun:Estrella fugaz"/>. I’ve come so far
-                                       Aladdin and Jasmine: Let me share this whole new world with you.</p>
+                               <div class="uk-width-1-2@m uk-text-justify transcrip-contenedor tam-contenido scroll-alumno letra-guion borde-guion">
+                                   <h:outputText value="#{actividadControlador.buscaTranscripcion('0_1NU60qHWs')}" escape="false"/>
                                </div>
                            </h:panelGroup>
                         </li>
@@ -166,7 +140,7 @@
                                 </div>
                                 <h:panelGroup layout="block" styleClass="uk-container padding-contenedor estilo-contenedor " >
 
-                                    <h:panelGroup layout="block" styleClass="uk-child-width-1-5@m uk-grid " pt:uk-grid="" pt:uk-sortable="">
+                                    <h:panelGroup layout="block" styleClass="uk-child-width-1-5@m uk-padding-small uk-grid " pt:uk-grid="" pt:uk-sortable="">
                                         <div>
                                             <div class="palabra uk-text-center">1</div>
                                         </div>
@@ -193,6 +167,7 @@
                             <h:panelGroup layout="block" styleClass="uk-child-width-1-2@m uk-grid" pt:uk-grid="">
                                 <h:panelGroup layout="block" >
                                     <h:panelGroup layout="block" styleClass="uk-sortable contenedor-respuesta" pt:uk-sortable="group: respuesta">
+                                        <h:graphicImage library="img" styleClass="marciano" name="mounstro/verde.svg" />
                                         <div class="respuesta">uno</div>
                                         <div class="respuesta">dos</div>
                                         <div class="respuesta">tres</div>
@@ -204,7 +179,7 @@
                                         <div class="respuesta">nueve</div>
                                     </h:panelGroup>
                                 </h:panelGroup>
-                                <div class="trancript-contenedor scroll-drag">
+                                <div class="trancript-contenedor scroll-drag ">
                                     <p>
                                         <span class="personaje">Will Smith:</span> I know you guys have been waiting and here&#39;s the very first trailer for Aladdin. It is the
                                         very first trailer. Don&#39;t get <h:outputText styleClass="uk-sortable respuesta-transcript" pt:uk-sortable="group: respuesta"/> though; don&#39;t get dizzy before we start to trailer. Don&#39;t get dizzy!</p>
@@ -241,6 +216,13 @@
 
             </div>
         </div>
+        <script type="text/javascript">
+            var palabras = document.querySelectorAll('.letra-guion strong');
+            palabras.forEach(function (palabra) {
+                palabra.style.color='red';
+            });
+        </script>
+
     </ui:define>
 </ui:composition>
 </html>
