estilos transcript para identificar palabras

--- a/tecolotl-web/src/main/webapp/alumno/transcrip-final.xhtml
+++ b/tecolotl-web/src/main/webapp/alumno/transcrip-final.xhtml
@@ -216,12 +216,12 @@
 
             </div>
         </div>
-        <script type="text/javascript">
-            var palabras = document.querySelectorAll('.letra-guion strong');
-            palabras.forEach(function (palabra) {
-                palabra.style.color='red';
-            });
-        </script>
+<!--        <script type="text/javascript">-->
+<!--            var palabras = document.querySelectorAll('.letra-guion strong');-->
+<!--            palabras.forEach(function (palabra) {-->
+<!--                palabra.style.color='green';-->
+<!--            });-->
+<!--        </script>-->
 
     </ui:define>
 </ui:composition>
