modificacion dasshboard alumno

--- a/tecolotl-web/src/main/webapp/alumno/dashboard.xhtml
+++ b/tecolotl-web/src/main/webapp/alumno/dashboard.xhtml
@@ -74,9 +74,9 @@
                                     </div>
                                     <div class="uk-width-1-1@s">
                                         <p class="uk-text-meta uk-margin-remove-bottom uk-margin-remove-top uk-text-small "><span class="uk-text-bold">Email:</span> #{alumnoControlador.alumnoModelo.correoPadreFamilia}</p>
-                                        <p class="uk-text-meta uk-margin-remove-bottom uk-margin-remove-top  uk-text-small "><span class="uk-text-bold" >Grade:</span> 2</p>
-                                        <p class="uk-text-meta uk-margin-remove-bottom uk-margin-remove-top uk-text-small "><span class="uk-text-bold">Group:</span> B</p>
+                                        <p class="uk-text-meta uk-margin-remove-bottom uk-margin-remove-top  uk-text-small "><span class="uk-text-bold" >Grade:</span> 2 <span class="uk-text-bold">Group:</span> B</p>
                                         <p class="uk-text-meta uk-margin-remove-bottom uk-margin-remove-top uk-text-small "><span class="uk-text-bold">Nivel:</span> #{alumnoControlador.alumnoModelo.nivelLenguajeModelo.valor}</p>
+                                        <p class="uk-text-meta uk-margin-remove-bottom uk-margin-remove-top uk-text-small "><span class="uk-text-bold">Academic Year:</span>2019 </p>
                                         <p class="uk-text-meta uk-margin-remove-bottom uk-margin-remove-top uk-text-small "><span class="uk-text-bold uk-text-primary">Edit Profile</span></p>
                                     </div>
                                 </div>
